Fix button spacing in database info section

--- a/src/glados/static/scss/chembl-style.scss
+++ b/src/glados/static/scss/chembl-style.scss
@@ -2343,7 +2343,7 @@ $max_chembl_logo_height: 60px;
 
 .database-stats {
   font-size: 0.85rem;
-  margin-bottom: 35px;
+  margin-bottom: 20px;
 }
 
 /**
